--- a/index.html
+++ b/index.html
@@ -177,20 +177,7 @@
                         garantindo uma experiência consistente e agradável em todas as plataformas.</p>
                     <a href="#" class="service-link">Saiba Mais <i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
-                <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-brain"></i></div>
-                    <h3>Consultoria Estratégica Digital</h3>
-                    <p>Ofereço insights valiosos para planejar e executar sua estratégia digital, desde a concepção de
-                        produtos até a otimização da experiência do usuário.</p>
-                    <a href="#" class="service-link">Saiba Mais <i class="fas fa-long-arrow-alt-right"></i></a>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-network-wired"></i></div>
-                    <h3>Integração de Sistemas Complexos</h3>
-                    <p>Conecto diferentes plataformas e APIs para criar ecossistemas digitais coesos e poderosos,
-                        facilitando o fluxo de dados e a automação de processos.</p>
-                    <a href="#" class="service-link">Saiba Mais <i class="fas fa-long-arrow-alt-right"></i></a>
-                </div>
+               
             </div>
         </div>
     </section>
@@ -209,9 +196,9 @@
 
                             </strong>.</p>
                         <div class="project-links">
-                            <a href="https://nevez06.github.io/Granja/" class="project-link" aria-label="Ver Projeto"><i
+                            <a href="https://nevez06.github.io/Granja/" target="_blank" class="project-link" aria-label="Ver Projeto"><i
                                     class="fas fa-external-link-alt"></i></a>
-                            <a href="https://github.com/Nevez06/Granja.git" class="project-link"
+                            <a href="https://github.com/Nevez06/Granja.git" target="_blank" class="project-link"
                                 aria-label="Ver Código"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
@@ -448,7 +435,7 @@
                 </div>
             </div>
             <div class="contact-formulario">
-                <form action="#" method="POST">
+                <form action="https://formsubmit.co/joaoantonioneves487@gmail.com" method="POST">
                     <div class="form-group">
                         <label for="nome">Seu Nome Completo:</label>
                         <input type="text" id="nome" name="nome" class="form-control" placeholder="Ex: Maria Oliveira"
@@ -469,6 +456,7 @@
                         <textarea id="mensagem" name="mensagem" class="form-control" rows="6"
                             placeholder="Descreva sua ideia ou necessidade..." required></textarea>
                     </div>
+                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
                     <button type="submit" class="btn btn-primary">Enviar Mensagem <i
                             class="fas fa-paper-plane"></i></button>
                 </form>
