--- a/materias/EstruturadeDados.html
+++ b/materias/EstruturadeDados.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR" data-theme="dark">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,12 +36,10 @@
 <body>
     <header>
         <div class="container header-container">
-            <a href="index.html" class="logo">
-                <div class="logo-icon">
-                    <i class="fas fa-sitemap"></i>
-                </div>
-                <span>Estrutura de Dados</span>
-             </a>
+            <a href="#" class="logo">
+                <span class="logo-icon"><i class="fas fa-j"></i></span>
+                João Neves
+            </a>
             <nav class="nav-links">
                 <a href="../index.html#hero" class="active">Início</a>
                 <a href="../index.html#about">Sobre</a>
@@ -385,8 +382,7 @@
         </div>
     </footer>
 
-    <script src="./materia.js"></script>
+     <script src="./materia.js"></script>
     <script src="../script.js"></script>
-    <script src="./projeto.js"></script>
 </body>
 </html>
