--- a/materias/mobile.html
+++ b/materias/mobile.html
@@ -38,7 +38,7 @@
         <a href="#" class="logo">
             <span class="logo-icon">
                 <i class="fas fa-globe"></i></span>
-            Técnicas Avançadas de Programação Web/Mobile
+            Programação Web/Mobile
         </a>
             <nav class="nav-links">
                 <a href="../index.html#hero" class="active">Início</a>
