--- a/projetos/tcc.html
+++ b/projetos/tcc.html
@@ -223,10 +223,10 @@
                         <p>Explore a versão funcional do GranjaEggMaster e veja como ele pode transformar o
                             gerenciamento da sua granja.</p>
                         <div class="demo-buttons">
-                            <a href="#" class="btn btn-primary">
+                            <a href="https://nevez06.github.io/Granja" target="_blank" class="btn btn-primary">
                                 <i class="fas fa-external-link-alt"></i> Acessar Demo
                             </a>
-                            <a href="#" class="btn btn-outline">
+                            <a href="https://github.com/Nevez06/Granja.git" target="_blank" class="btn btn-outline">
                                 <i class="fab fa-github"></i> Ver Código
                             </a>
                         </div>
