--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
                         <textarea id="mensagem" name="mensagem" class="form-control" rows="6"
                             placeholder="Descreva sua ideia ou necessidade..." required></textarea>
                     </div>
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
-                    <button type="submit" class="btn btn-primary">Enviar Mensagem <i
+                    <input type="hidden" name="_next"  value=" https://nevez06.github.io/thanks.html">
+                    <button  type="submit"  class="btn btn-primary">Enviar Mensagem <i
                             class="fas fa-paper-plane"></i></button>
                 </form>
             </div>
