--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                         <textarea id="mensagem" name="mensagem" class="form-control" rows="6"
                             placeholder="Descreva sua ideia ou necessidade..." required></textarea>
                     </div>
-                    <input type="hidden" name="_next"  value=" https://nevez06.github.io/thanks.html">
+                    <input type="hidden" name="_next"  value=" https://nevez06.github.io/portfolio/thanks.html">
                     <button  type="submit"  class="btn btn-primary">Enviar Mensagem <i
                             class="fas fa-paper-plane"></i></button>
                 </form>
