--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-image-wrapper">
-                    <img src="https://picsum.photos/600/750?random=3"
+                    <img src="./img/formatura.jpg"
                         alt="">
                 </div>
                 <div class="hero-image-decor"></div>
@@ -110,7 +110,7 @@
         <div class="container about-content">
             <div class="about-image">
                 <div class="about-image-wrapper">
-                    <img src="https://picsum.photos/600/750?random=4"
+                    <img src="./img/foto.jpg"
                         alt="João Neves trabalhando em um projeto de design, em um ambiente de alta tecnologia.">
                 </div>
                 <div class="about-image-decor"></div>
